# storyqueries

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mypy.ini  precommit.py  pyproject.toml
.github/workflows/: bandit.yml  docs.yml  lint.yml  tests.yml
src/storyqueries/: __init__.py  interactive.py  larousse.py  lexicala.py  linguee.py  pixabay.py
src/thscraper/: linguee.py  pixabay.py
tests/: test_larousse.py  test_lexicala.py  test_linguee.py  test_pixabay.py
